@@ -7,15 +7,54 @@
 #include <unistd.h>
 #include <fcntl.h>
 #include <errno.h>
+
+/* Tcl 9 removed CONST* macros entirely. I'm redefining them here
+  for the unlikely corner case where Tcl8 was build with USE_NON_CONST.
+  These definitions are needed in uds.h unless CONST symbols are dropped */
+
+#ifndef CONST
+#  define CONST const
+#endif
+#ifndef CONST84
+#  define CONST84 const
+#endif
+#ifndef CONST86
+#  define CONST86 const
+#endif
+#ifndef CONST84_RETURN
+#  define CONST84_RETURN const
+#endif
+
 #include "uds.h"
 #include "config.h"
 
 //#include <sys/ioctl.h>
 
+/* tcl_const_compat.h */
+#include <tcl.h>
+
+#ifndef TCL_SIZE_MAX
+# define Tcl_GetSizeIntFromObj Tcl_GetIntFromObj
+# define TCL_SIZE_MAX      INT_MAX
+# ifndef Tcl_Size
+    typedef int Tcl_Size;
+# endif
+# define TCL_SIZE_MODIFIER ""
+#endif
+
+/* Actually we could do this in the previous preprocessor
+   conditional but I want to stress the point that the
+   channel version in Tcl9 was changed to 5 */ 
+
+#if TCL_MAJOR_VERSION == 8
+#define UNIX_SOCKET_CHANNEL_VERSION TCL_CHANNEL_VERSION_2
+#else
+#define UNIX_SOCKET_CHANNEL_VERSION TCL_CHANNEL_VERSION_5
+#endif
 
 static Tcl_ChannelType unix_socket_channel_type = {
 	"unix_socket",
-	TCL_CHANNEL_VERSION_2,
+	UNIX_SOCKET_CHANNEL_VERSION,
 	closeProc,
 	inputProc,
 	outputProc,
@@ -44,9 +83,7 @@ typedef struct uds_state {
 } uds_state;
 
 
-static int closeProc(cdata, interp) //<<<
-	ClientData		cdata;
-	Tcl_Interp		*interp;
+static int closeProc(ClientData cdata,Tcl_Interp* interp) //<<<
 {
 	uds_state *	con = (uds_state *)cdata;
 
@@ -72,11 +109,7 @@ static int closeProc(cdata, interp) //<<<
 }
 
 //>>>
-static int inputProc(cdata, buf, bufSize, errorCodePtr) //<<<
-	ClientData	cdata;
-	char		*buf;
-	int			bufSize;
-	int *		errorCodePtr;
+static int inputProc(ClientData cdata, char* buf, int bufSize, int* errorCodePtr) //<<<
 {
 	int			got;
 	uds_state *	con = (uds_state *)cdata;
@@ -90,11 +123,7 @@ static int inputProc(cdata, buf, bufSize, errorCodePtr) //<<<
 }
 
 //>>>
-static int outputProc(cdata, buf, toWrite, errorCodePtr) //<<<
-	ClientData		cdata;
-	const char *	buf;
-	int				toWrite;
-	int *			errorCodePtr;
+static int outputProc(ClientData cdata,const char* buf, int toWrite, int* errorCodePtr) //<<<
 {
 	int			wrote;
 	uds_state *	con = (uds_state *)cdata;
@@ -107,9 +136,7 @@ static int outputProc(cdata, buf, toWrite, errorCodePtr) //<<<
 }
 
 //>>>
-static int blockModeProc(cdata, mode) //<<<
-	ClientData		cdata;
-	int				mode;
+static int blockModeProc(ClientData cdata,int mode) //<<<
 {
 	uds_state *	con = (uds_state *)cdata;
 	int			flags, err;
@@ -139,9 +166,7 @@ static int blockModeProc(cdata, mode) //<<<
 }
 
 //>>>
-static void watchProc(cdata, mask) //<<<
-	ClientData		cdata;
-	int				mask;
+static void watchProc(ClientData cdata, int mask) //<<<
 {
 	uds_state *	con = (uds_state *)cdata;
 
@@ -154,10 +179,7 @@ static void watchProc(cdata, mask) //<<<
 }
 
 //>>>
-static int getHandleProc(cdata, direction, handlePtr) //<<<
-	ClientData		cdata;
-	int				direction;
-	ClientData *	handlePtr;
+static int getHandleProc(ClientData cdata,int direction,ClientData* handlePtr) //<<<
 {
 	uds_state *	con = (uds_state *)cdata;
 
@@ -168,9 +190,7 @@ static int getHandleProc(cdata, direction, handlePtr) //<<<
 }
 
 //>>>
-static void accept_dispatcher(cdata, mask) //<<<
-	ClientData		cdata;
-	int				mask;
+static void accept_dispatcher(ClientData cdata,int mask) //<<<
 {
 	uds_state *			state = (uds_state *)cdata;
 	struct sockaddr_un	client_address;
@@ -220,16 +240,12 @@ static void accept_dispatcher(cdata, mask) //<<<
 }
 
 //>>>
-static int glue_listen(cdata, interp, objc, objv) //<<<
-	ClientData		cdata;
-	Tcl_Interp *	interp;
-	int				objc;
-	Tcl_Obj *CONST	objv[];
+static int glue_listen(ClientData cdata,Tcl_Interp* interp,int objc,Tcl_Obj *CONST objv[]) //<<<
 {
 	int					server_sockfd, server_len;
 	struct sockaddr_un	server_address;
 	char *				path;
-	int					path_len;
+	Tcl_Size			path_len;
 	uds_state *			state;
 	char				channel_name[64];
 	Tcl_Channel			channel;
@@ -274,17 +290,14 @@ static int glue_listen(cdata, interp, objc, objv) //<<<
 }
 
 //>>>
-static int glue_connect(cdata, interp, objc, objv) //<<<
-	ClientData		cdata;
-	Tcl_Interp *	interp;
-	int				objc;
-	Tcl_Obj *CONST	objv[];
+static int glue_connect(ClientData cdata,Tcl_Interp* interp,int objc,Tcl_Obj *CONST objv[]) //<<<
 {
 	Tcl_Channel			channel;
 	int					fd;
 	char				channel_name[64];
 	char *				path;
-	int					path_len, result;
+	Tcl_Size			path_len;
+    int                 result;
 	struct sockaddr_un	address;
 	int					sockaddr_len;
 	uds_state *			con;
@@ -333,8 +346,11 @@ static int glue_connect(cdata, interp, objc, objv) //<<<
 //>>>
 int Unix_sockets_Init(Tcl_Interp *interp) //<<<
 {
-	if (Tcl_InitStubs(interp, "8.2", 0) == NULL)
+    /* Notice that the upper bound is exclusive */
+	if (Tcl_InitStubs(interp, "8.2-10", 0) == NULL)
+    {
 		return TCL_ERROR;
+    }
 
 	NEW_CMD("unix_sockets::listen", glue_listen);
 	NEW_CMD("unix_sockets::connect", glue_connect);
